Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18967

Load data in system version with long unique does not work

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.4.3
    • 10.4.4
    • Server
    • None
    • All

    Description

      CREATE TABLE t1 (data VARCHAR(4), unique(data) using hash) with system versioning;
       
      INSERT INTO t1 VALUES ('A'),('B');
      SELECT * INTO OUTFILE 'load.data' from t1;
       
      select * from t1;
      LOAD DATA INFILE 'load.data'  INTO TABLE t1;
      select * from t1;
      DROP TABLE t1;
      --let $datadir= `select @@datadir`
      --remove_file $datadir/test/load.data
      
      

      CREATE TABLE t1 (data VARCHAR(4), unique(data) using hash) with system versioning;
      INSERT INTO t1 VALUES ('A'),('B');
      SELECT * INTO OUTFILE 'load.data' from t1;
      select * from t1;
      data
      A
      B
      LOAD DATA INFILE 'load.data'  INTO TABLE t1;
      select * from t1;
      data
      A
      B
      A
      B
      DROP TABLE t1;
      main.abc                                 [ pass ]     12
      
      

      Attachments

        Issue Links

          Activity

            People

              sachin.setiya.007 Sachin Setiya (Inactive)
              sachin.setiya.007 Sachin Setiya (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: