MDEV-18967 Load data in system version with long unique does not work

Update system versioning fields before generated columns for left out
fill_record